chore: update favicon and assets

--- a/src/pages/hire-talent.astro
+++ b/src/pages/hire-talent.astro
@@ -59,7 +59,7 @@ import Layout from '../components/Layout.astro';
         <!-- Conditions Card -->
         <div class="card card-tall">
             <h3 class="title">Conditions:</h3>
-            <div class="body-text">
+            <div class="body-text flex-1">
                 <strong>Costs:</strong>
                 <ul class="list-bulleted">
                     <li>The fee of the placement is an agreed percentage of your candidate's salary.</li>
@@ -73,7 +73,7 @@ import Layout from '../components/Layout.astro';
                 That's why we selectively choose our partners. Unfortunately, we cannot work with every company.
                 Let's find out if our collaboration makes sense.
             </div>
-            <div class="btn-group" style="margin-top: 20px; margin-bottom: 20px;">
+            <div class="btn-group mt-auto">
                 <a href="#callback" class="btn btn-primary btn-full">Receive a call back</a>
                 <a href="#schedule" class="btn btn-primary btn-full">Schedule your meeting</a>
             </div>
