--- a/src/pages/hire-talent.astro
+++ b/src/pages/hire-talent.astro
@@ -7,7 +7,7 @@ import Layout from '../components/Layout.astro';
         <!-- First Collaboration Process -->
         <div class="card card-tall">
             <h3 class="title">First collaboration:</h3>
-            <ol class="list-numbered">
+            <ol class="list-numbered flex-1">
                 <li>We speak about your needs.</li>
                 <li>We search, qualify and select your candidates.</li>
                 <li>You receive our overview, CV and salary expectation of candidates who confirmed they want to interview for your position.</li>
@@ -20,7 +20,7 @@ import Layout from '../components/Layout.astro';
         <!-- Future Collaboration Process -->
         <div class="card card-tall">
             <h3 class="title">If you ever hire again:</h3>
-            <ol class="list-numbered">
+            <ol class="list-numbered flex-1">
                 <li>You let us know.</li>
                 <li>Your dedicated consultant will revisit all information we stored about your needs, your company and our previous processes.</li>
                 <li>We immediately contact our network to see who at this point wants to have an interview with you.</li>
@@ -73,7 +73,7 @@ import Layout from '../components/Layout.astro';
                 That's why we selectively choose our partners. Unfortunately, we cannot work with every company.
                 Let's find out if our collaboration makes sense.
             </div>
-            <div class="btn-group mt-auto">
+            <div class="btn-group">
                 <a href="#callback" class="btn btn-primary btn-full">Receive a call back</a>
                 <a href="#schedule" class="btn btn-primary btn-full">Schedule your meeting</a>
             </div>
