--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -92,7 +92,7 @@ import Layout from '../components/Layout.astro';
                 <p><strong>Business Partners:</strong></p>
                 <ul class="list-bulleted">
                     <li><strong>Client Companies:</strong> We share candidate profiles with prospective employers only after informing you and confirming your interest in the specific opportunity</li>
-                    <li><strong>Partner Recruitment Firms:</strong> Located in EU countries and Brazil, operating under strict confidentiality agreements</li>
+                    <li><strong>Partner Recruitment Firms:</strong> Located in EU and non-EU countries, operating under strict confidentiality agreements</li>
                 </ul>
 
                 <div class="section-break"></div>
