--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ const { currentPage } = Astro.props;
     <div class="header-left">
         <a href="/opportunities" class="logo-link nav-link">
             <div class="logo">
-                <img src="/assets/logo.png" alt="luxsearch logo">
+                <img src="/assets/logo.png" alt="luxsearch® logo">
             </div>
             <div class="brand">
                 <span class="brand-name">luxsearch®</span>
