--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ window.location.replace('/opportunities/');
 <head>
   <meta charset="utf-8">
   <meta http-equiv="refresh" content="0; url=/opportunities/">
-  <title>Redirecting...</title>
+  <title>luxsearch® - Premium IT Recruitment</title>
 </head>
 <body>
   <p>Redirecting to opportunities...</p>
